; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vtterm_param.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vtterm_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.terminal = type { %struct.vt_window* }
%struct.vt_window = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.terminal*, i32, i32)* @vtterm_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vtterm_param(%struct.terminal* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.terminal*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.vt_window*, align 8
  store %struct.terminal* %0, %struct.terminal** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.terminal*, %struct.terminal** %4, align 8
  %9 = getelementptr inbounds %struct.terminal, %struct.terminal* %8, i32 0, i32 0
  %10 = load %struct.vt_window*, %struct.vt_window** %9, align 8
  store %struct.vt_window* %10, %struct.vt_window** %7, align 8
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %28 [
    i32 129, label %12
    i32 128, label %17
    i32 130, label %24
  ]

12:                                               ; preds = %3
  %13 = load i32, i32* %6, align 4
  %14 = icmp eq i32 %13, 1
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 0, i32 1
  store i32 %16, i32* %6, align 4
  br label %17

17:                                               ; preds = %3, %12
  %18 = load %struct.vt_window*, %struct.vt_window** %7, align 8
  %19 = getelementptr inbounds %struct.vt_window, %struct.vt_window* %18, i32 0, i32 1
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @vtbuf_cursor_visibility(i32* %19, i32 %20)
  %22 = load %struct.vt_window*, %struct.vt_window** %7, align 8
  %23 = call i32 @vt_resume_flush_timer(%struct.vt_window* %22, i32 0)
  br label %28

24:                                               ; preds = %3
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.vt_window*, %struct.vt_window** %7, align 8
  %27 = getelementptr inbounds %struct.vt_window, %struct.vt_window* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  br label %28

28:                                               ; preds = %3, %24, %17
  ret void
}

declare dso_local i32 @vtbuf_cursor_visibility(i32*, i32) #1

declare dso_local i32 @vt_resume_flush_timer(%struct.vt_window*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
